--- a/Chip-8/Chip-8.vcxproj.filters
+++ b/Chip-8/Chip-8.vcxproj.filters
@@ -43,5 +43,6 @@
     <Text Include="Notes.txt" />
     <Text Include="Instructions.txt" />
     <Text Include="Display.txt" />
+    <Text Include="Todo.txt" />
   </ItemGroup>
 </Project>
